package com.consultorio.domain;

public enum EstadoTurno {
    PENDIENTE,
    CONFIRMADO,
    CANCELADO,
    COMPLETADO,
    AUSENTE
}
