package com.consultorio.domain;

public enum Rol {
    PACIENTE,
    DOCTOR
}
